--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "modules/dotfiles"]
 	path = modules/dotfiles
 	url = git@github.com:redjax/dotfiles.git
+[submodule "modules/docker_templates"]
+	path = modules/docker_templates
+	url = git@github.com:redjax/docker_templates.git
