--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "modules/PowershellProfile"]
 	path = modules/PowershellProfile
 	url = git@github.com:redjax/PowershellProfile.git
+[submodule "modules/system_scripts"]
+	path = modules/system_scripts
+	url = git@github.com:redjax/system_scripts.git
