fix(powershell-mods): Add Powershell modules submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "modules/python_pkgs"]
 	path = modules/python_pkgs
 	url = git@github.com:redjax/python_pkgs.git
+[submodule "modules/PowershellModules"]
+	path = modules/PowershellModules
+	url = git@github.com:redjax/PowershellModules.git
