--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "modules/cookiecutter"]
 	path = modules/cookiecutter
 	url = git@github.com:redjax/cookiecutter.git
+[submodule "modules/awwesome-tools"]
+	path = modules/awwesome-tools
+	url = git@github.com:redjax/awesome-tools.git
