--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "modules/emacs"]
 	path = modules/emacs
 	url = git@github.com:redjax/emacs.git
+[submodule "modules/templates"]
+	path = modules/templates
+	url = git@github.com:redjax/templates.git
