--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,42 @@ build/
 out/
 coverage/
 
+## Python ignores
+
+.python-version
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Unit test / coverage reports
+.tox/
+.nox/
+.cache
+*.cover
+.pytest_cache/
+
 ## KEEP EVERYTHING BELOW AT THE BOTTOM
 
 ## Allow example files
