fix(lint-pipeline): Hang on just a second, I think I mis-read the changed files diff!

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,7 +24,7 @@ jobs:
         working-directory: ./scripts/updater
         run: |
           ## Fix imports
-          # ruff check . --select I --fix
+          ruff check . --select I --fix
 
           ## Format code
           ruff check . --fix
