fix(vscode): Add vscode settings.json & update .gitignore.
settings.json sets the git submodule limit to 20 to compensate for all the submodules here. This seems like the first hurdle to solve

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ Thumbs.db
 *.swp
 *.swo
 *~
-.vscode/
+.vscode/*
 .idea/
 # Allow code workspaces
 !*.code-workspace
@@ -69,3 +69,8 @@ MANIFEST
 !*example*.*
 !*.*example*
 !*.*example*.*
+
+## Don't ignore certain .vscode files
+!.vscode/
+!.vscode/settings.json
+!.vscode/*.code-workspace
