--- a/.gitmodules
+++ b/.gitmodules
@@ -1,48 +1,48 @@
 [submodule "modules/neovim"]
 	path = modules/neovim
-	url = git@github.com:redjax/neovim.git
+	url = https://github.com/redjax/neovim.git
 [submodule "modules/dotfiles"]
 	path = modules/dotfiles
-	url = git@github.com:redjax/dotfiles.git
+	url = https://github.com/redjax/dotfiles.git
 [submodule "modules/docker_templates"]
 	path = modules/docker_templates
-	url = git@github.com:redjax/docker_templates.git
+	url = https://github.com/redjax/docker_templates.git
 [submodule "modules/PowershellProfile"]
 	path = modules/PowershellProfile
-	url = git@github.com:redjax/PowershellProfile.git
+	url = https://github.com/redjax/PowershellProfile.git
 [submodule "modules/system_scripts"]
 	path = modules/system_scripts
-	url = git@github.com:redjax/system_scripts.git
+	url = https://github.com/redjax/system_scripts.git
 [submodule "modules/wezterm"]
 	path = modules/wezterm
-	url = git@github.com:redjax/wezterm.git
+	url = https://github.com/redjax/wezterm.git
 [submodule "modules/ansible_homelab"]
 	path = modules/ansible_homelab
-	url = git@github.com:redjax/ansible_homelab.git
+	url = https://github.com/redjax/ansible_homelab.git
 [submodule "modules/Terraform"]
 	path = modules/Terraform
-	url = git@github.com:redjax/Terraform.git
+	url = https://github.com/redjax/Terraform.git
 [submodule "modules/redkb"]
 	path = modules/redkb
-	url = git@github.com:redjax/redkb.git
+	url = https://github.com/redjax/redkb.git
 [submodule "modules/python_pkgs"]
 	path = modules/python_pkgs
-	url = git@github.com:redjax/python_pkgs.git
+	url = https://github.com/redjax/python_pkgs.git
 [submodule "modules/PowershellModules"]
 	path = modules/PowershellModules
-	url = git@github.com:redjax/PowershellModules.git
+	url = https://github.com/redjax/PowershellModules.git
 [submodule "modules/cookiecutter"]
 	path = modules/cookiecutter
-	url = git@github.com:redjax/cookiecutter.git
+	url = https://github.com/redjax/cookiecutter.git
 [submodule "modules/awwesome-tools"]
 	path = modules/awesome-tools
-	url = git@github.com:redjax/awesome-tools.git
+	url = https://github.com/redjax/awesome-tools.git
 [submodule "modules/helix"]
 	path = modules/helix
-	url = git@github.com:redjax/helix.git
+	url = https://github.com/redjax/helix.git
 [submodule "modules/emacs"]
 	path = modules/emacs
-	url = git@github.com:redjax/emacs.git
+	url = https://github.com/redjax/emacs.git
 [submodule "modules/templates"]
 	path = modules/templates
-	url = git@github.com:redjax/templates.git
+	url = https://github.com/redjax/templates.git
