--- a/.github/workflows/update-submodules.yml
+++ b/.github/workflows/update-submodules.yml
@@ -1,7 +1,11 @@
 name: Update repository submodules
 
 on:
-  workflow_dispatch:
+  ## Manual trigger
+  # workflow_dispatch:
+  ## Scheduled trigger
+  schedule:
+    - cron: "0 0,12 * * *"
 
 jobs:
   update-submodules:
