fix(submodules): Re-add manual trigger alongside schedule

--- a/.github/workflows/update-submodules.yml
+++ b/.github/workflows/update-submodules.yml
@@ -2,7 +2,7 @@ name: Update repository submodules
 
 on:
   ## Manual trigger
-  # workflow_dispatch:
+  workflow_dispatch:
   ## Scheduled trigger
   schedule:
     - cron: "0 0,12 * * *"
