fix(rename): Rename auto-merge PR step

--- a/.github/workflows/update-submodules.yml
+++ b/.github/workflows/update-submodules.yml
@@ -78,7 +78,7 @@ jobs:
             ./modules
             README.md
 
-  auto-merge:
+  auto-merge-pr:
     runs-on: ubuntu-latest
     needs: update-submodules
     if: needs.update-submodules.outputs.pr_number != ''
