--- a/.github/workflows/update-submodules.yml
+++ b/.github/workflows/update-submodules.yml
@@ -98,3 +98,20 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_READWRITE_PAT }}
         run: |
           gh pr merge ${{ needs.update-submodules.outputs.pr_number }} --auto --squash
+
+      - name: Delete branch if PR merged successfully
+        if: steps.pr-status.outputs.merged == 'true'
+        env:
+          GH_TOKEN: ${{ secrets.GH_READWRITE_PAT }}
+        run: |
+          echo "Deleting branch chore/demo-update because PR was merged"
+          gh api -X DELETE repos/$GITHUB_REPOSITORY/git/refs/heads/chore/demo-update
+          if [[ $? != 0 ]]; then
+            echo "[ERROR] Failed to delete branch chore/demo-update"
+            exit $?
+          else
+            echo "Deleted branch chore/demo-update"
+          fi
+
+          exit 0
+
