submodule(git_dir): Add git_dir submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "modules/Notetkr"]
 	path = modules/Notetkr
 	url = https://github.com/redjax/Notetkr.git
+[submodule "modules/git_dir"]
+	path = modules/git_dir
+	url = https://github.com/redjax/git_dir.git
