script: Start work on deployment script
Loads from a JSON file & clones modules into full git repositories.

Optionally update the remote url

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,9 @@ MANIFEST
 *.cover
 .pytest_cache/
 
+## Mothership repo ignores
+deploy.json
+
 ## KEEP EVERYTHING BELOW AT THE BOTTOM
 
 ## Allow example files
